make module 3.4 full, tested ok